--- a/OnlineStoreLego.Web/OnlineStoreLego.Web.csproj
+++ b/OnlineStoreLego.Web/OnlineStoreLego.Web.csproj
@@ -135,6 +135,10 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Items\listOfItems.cshtml" />
+    <Content Include="Views\Home\Contact.cshtml" />
+    <Content Include="Views\Home\About.cshtml" />
+    <Content Include="Views\Home\ShopListing.cshtml" />
+    <Content Include="Views\Home\LogIn.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
