--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -8,21 +8,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-
-	<connectionStrings>
-		<add name ="WebApp"
-			connectionString="Data Source = WIN-93HTOCOIRG8\SQLEXPRESS;
-			Initial Catalog = WebApplication;
-			Integrated Security = true;
-			MultipleActiveResultSets = True;
-			App = EntityFramework;
-			TrustServerCertificate=True"
-			providerName ="System.Data.SqlClient"
-			/>
-	</connectionStrings>
-	
-	
-	
+  <!-- my_server -->
+  <connectionStrings>
+    <add name="WebApp" connectionString="Data Source = VLADICK;     Initial Catalog = WebApplication;    Integrated Security = true;    MultipleActiveResultSets = True;    App = EntityFramework;    TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
