--- a/WebApplication/packages.config
+++ b/WebApplication/packages.config
@@ -1,9 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="8.1.1" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="Owin" version="1.0" targetFramework="net48" />
 </packages>
