--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -12,8 +12,11 @@
 	
   <!-- my_server -->
   <connectionStrings>
-    <add name="WebApp" connectionString="Data Source = WIN-93HTOCOIRG8\SQLEXPRESS;
-		 Initial Catalog = WebApplication1;
+    <!--<add name="WebApp" connectionString="Data Source = WIN-93HTOCOIRG8\SQLEXPRESS;
+       Initial Catalog = WebApplication1;-->
+		 
+		 <add name="WebApp" connectionString="Data Source = DESKTOP-8IDP3GT;
+		 Initial Catalog = WebApplication;
 		 Integrated Security = true;
 		 MultipleActiveResultSets = True;
 		 App = EntityFramework;
