web config - all dbs

--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -10,13 +10,30 @@
   </configSections>
 	
 	
-  <!-- my_server -->
+ 
   <connectionStrings>
-    <!--<add name="WebApp" connectionString="Data Source = WIN-93HTOCOIRG8\SQLEXPRESS;
-       Initial Catalog = WebApplication1;-->
-		 
+
+	  <!-- Vlada -->
+	  <!--<add name="WebApp" connectionString="Data Source = VLADICK;     
+	  Initial Catalog = WebApplication;-->
+
+
+
+	  <!-- Arina -->
+	  <!--
 		 <add name="WebApp" connectionString="Data Source = DESKTOP-8IDP3GT;
-		 Initial Catalog = WebApplication;
+		 Initial Catalog = WebApplication;-->
+
+
+	  <!--Eva-->
+	  <add name="WebApp" connectionString="Data Source = WIN-93HTOCOIRG8\SQLEXPRESS;
+       Initial Catalog = WebApplication2;
+
+
+		  
+			  
+			  
+			  
 		 Integrated Security = true;
 		 MultipleActiveResultSets = True;
 		 App = EntityFramework;
