--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -17,27 +17,13 @@
 	  <!--<add name="WebApp" connectionString="Data Source = VLADICK;     
 	  Initial Catalog = WebApplication;-->
 
-
+	  <!--Eva-->
+	  <!--<add name="WebApp" connectionString="Data Source = WIN-93HTOCOIRG8\SQLEXPRESS;
+       Initial Catalog = WebApplication2;-->
 
 	  <!-- Arina -->
-	  <!--
-		 <add name="WebApp" connectionString="Data Source = DESKTOP-8IDP3GT;
-		 Initial Catalog = WebApplication;-->
-
-
-	  <!--Eva-->
-	  <add name="WebApp" connectionString="Data Source = WIN-93HTOCOIRG8\SQLEXPRESS;
-       Initial Catalog = WebApplication2;
-
-
-		  
-			  
-			  
-			  
-		 Integrated Security = true;
-		 MultipleActiveResultSets = True;
-		 App = EntityFramework;
-		 TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+	  
+		 <add name="WebApp" connectionString="Data Source = DESKTOP-8IDP3GT;    Initial Catalog = WebApplication;                                  Integrated Security = true;    MultipleActiveResultSets = True;    App = EntityFramework;    TrustServerCertificate=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 	
 
@@ -95,7 +81,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
