--- a/WebApplication.BL/packages.config
+++ b/WebApplication.BL/packages.config
@@ -1,11 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net48" />
   <package id="AutoMapper" version="8.1.1" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net48" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net48" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net48" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net48" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net48" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net48" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net48" />
 </packages>
