--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -17,13 +17,26 @@
 	  <!--<add name="WebApp" connectionString="Data Source = VLADICK;     
 	  Initial Catalog = WebApplication;-->
 
-	  <!--Eva-->
-	  <!--<add name="WebApp" connectionString="Data Source = WIN-93HTOCOIRG8\SQLEXPRESS;
-       Initial Catalog = WebApplication2;-->
+	  
 
 	  <!-- Arina -->
 	  
-		 <add name="WebApp" connectionString="Data Source = DESKTOP-8IDP3GT;    Initial Catalog = WebApplication;                                  Integrated Security = true;    MultipleActiveResultSets = True;    App = EntityFramework;    TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+		 <!--<add name="WebApp" connectionString="Data Source = DESKTOP-8IDP3GT;    
+			  Initial Catalog = WebApplication;-->  
+			  
+			  
+			  <!--Eva-->
+	  
+	  <add name="WebApp" connectionString="Data Source = WIN-93HTOCOIRG8\SQLEXPRESS;
+       Initial Catalog = WebApplication2;
+			  
+			  
+			  
+			  Integrated Security = true;    
+			  MultipleActiveResultSets = True;    
+			  App = EntityFramework;    
+			  TrustServerCertificate=True" 
+			  providerName="System.Data.SqlClient" />
   </connectionStrings>
 	
 
