--- a/WebApplication.BL/WebApplication.BL.csproj
+++ b/WebApplication.BL/WebApplication.BL.csproj
@@ -88,8 +88,11 @@
   <ItemGroup>
     <Compile Include="AutoMapperProfile.cs" />
     <Compile Include="BusinessLogic.cs" />
+    <Compile Include="Core\ArticleApi.cs" />
+    <Compile Include="Core\ArticleDTO.cs" />
     <Compile Include="Core\UserApi.cs" />
     <Compile Include="Core\UserDTO.cs" />
+    <Compile Include="DBModel\ArticleContext.cs" />
     <Compile Include="DBModel\SessionContext.cs" />
     <Compile Include="DBModel\UserContext.cs" />
     <Compile Include="Interfaces\ISession.cs" />
