--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -10,6 +10,7 @@
   </configSections>
 
 
+
 	<connectionStrings>
 
 		<!-- Vlada -->
@@ -22,7 +23,13 @@
 
 		<!-- Arina -->
 
-		<add name="WebApp" connectionString="Data Source = DESKTOP-8IDP3GT;    Initial Catalog = WebApplication;                                  Integrated Security = true;    MultipleActiveResultSets = True;    App = EntityFramework;    TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+		<add name="WebApp" connectionString="Data Source = DESKTOP-8IDP3GT;   
+			 Initial Catalog = WebApplication;     
+			 Integrated Security = true;  
+			 MultipleActiveResultSets = True;   
+			 App = EntityFramework; 
+			 TrustServerCertificate=True"
+			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	
 
