--- a/WebApplication.BL/WebApplication.BL.csproj
+++ b/WebApplication.BL/WebApplication.BL.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Core\UserApi.cs" />
     <Compile Include="Core\UserDTO.cs" />
     <Compile Include="DBModel\ArticleContext.cs" />
+    <Compile Include="DBModel\NewArticleContext.cs" />
     <Compile Include="DBModel\SessionContext.cs" />
     <Compile Include="DBModel\UserContext.cs" />
     <Compile Include="Interfaces\ISession.cs" />
