Two types of reviews from DB

--- a/WebApplication.BL/WebApplication.BL.csproj
+++ b/WebApplication.BL/WebApplication.BL.csproj
@@ -90,9 +90,12 @@
     <Compile Include="BusinessLogic.cs" />
     <Compile Include="Core\ProductApi.cs" />
     <Compile Include="Core\ProductDTO.cs" />
+    <Compile Include="Core\ReviewApi.cs" />
+    <Compile Include="Core\ReviewDTO.cs" />
     <Compile Include="Core\UserApi.cs" />
     <Compile Include="Core\UserDTO.cs" />
     <Compile Include="DBModel\ProductContext.cs" />
+    <Compile Include="DBModel\ReviewContext.cs" />
     <Compile Include="DBModel\SessionContext.cs" />
     <Compile Include="DBModel\UserContext.cs" />
     <Compile Include="Interfaces\ISession.cs" />
