--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -21,7 +21,13 @@
        Initial Catalog = WebApplication2;-->
 
 	  <!-- Vlad -->
-	  <add name="WebApp" connectionString="Data Source = VLADICK;         Initial Catalog = WebApplication;                     Integrated Security = true;    MultipleActiveResultSets = True;    App = EntityFramework;    TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+	  <add name="WebApp" connectionString="Data Source = VLADICK;
+		   Initial Catalog = WebApplication;   
+		   Integrated Security = true;  
+		   MultipleActiveResultSets = True;  
+		   App = EntityFramework;  
+		   TrustServerCertificate=True"
+		   providerName="System.Data.SqlClient" />
   </connectionStrings>
 	
 
