--- a/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication.csproj
@@ -237,7 +237,9 @@
     <Compile Include="AutoMapperProfile.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\HomeAdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\HomeUserController.cs" />
     <Compile Include="Controllers\ItemsController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\ManageProductController.cs" />
@@ -339,7 +341,6 @@
     <Content Include="Views\Login\SignIn.cshtml" />
     <Content Include="Views\Home\LogOut.cshtml" />
     <Content Include="Views\Shared\ULayout.cshtml" />
-    <Content Include="Views\Login\UAccountHome.cshtml" />
     <Content Include="Views\Shared\LayoutAdmin.cshtml" />
     <Content Include="Views\Admin\AdminAccount.cshtml" />
     <Content Include="Views\Admin\ManageUsers.cshtml" />
@@ -352,10 +353,27 @@
     <Content Include="Views\Users\ViewOrdersU.cshtml" />
     <Content Include="Views\Users\EditInfo.cshtml" />
     <Content Include="Views\Shared\ALayout.cshtml" />
-    <Content Include="Views\Login\AdminAccountHome.cshtml" />
     <Content Include="Views\Admin\CreateProduct.cshtml" />
     <Content Include="Views\ManageContent\EditArticle.cshtml" />
     <Content Include="Views\ManageContent\AddArticle.cshtml" />
+    <Content Include="Views\HomeAdmin\HomeAdmin2.cshtml" />
+    <Content Include="Views\HomeAdmin\About.cshtml" />
+    <Content Include="Views\HomeAdmin\Contact.cshtml" />
+    <Content Include="Views\HomeAdmin\ShopListing.cshtml" />
+    <Content Include="Views\HomeAdmin\Blog.cshtml" />
+    <Content Include="Views\HomeAdmin\BlogDetail.cshtml" />
+    <Content Include="Views\HomeAdmin\Wishlist.cshtml" />
+    <Content Include="Views\HomeAdmin\ProductDetail.cshtml" />
+    <Content Include="Views\HomeUser\HomeUsers.cshtml" />
+    <Content Include="Views\HomeUser\About.cshtml" />
+    <Content Include="Views\HomeUser\Contact.cshtml" />
+    <Content Include="Views\HomeUser\ShopListing.cshtml" />
+    <Content Include="Views\HomeUser\Blog.cshtml" />
+    <Content Include="Views\HomeUser\BlogDetail.cshtml" />
+    <Content Include="Views\HomeUser\Cart.cshtml" />
+    <Content Include="Views\HomeUser\Wishlist.cshtml" />
+    <Content Include="Views\HomeUser\Checkout.cshtml" />
+    <Content Include="Views\HomeUser\ProductDetail.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
