--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -21,8 +21,12 @@
        Initial Catalog = WebApplication2;-->
 
 	  <!-- Vlad -->
-	  <add name="WebApp" connectionString="Data Source = VLADICK;
-		   Initial Catalog = WebApplication;   
+	  <!--<add name="WebApp" connectionString="Data Source = VLADICK;
+		   Initial Catalog = WebApplication;-->
+
+		<add name="WebApp" connectionString="Data Source = WIN-93HTOCOIRG8\SQLEXPRESS;
+       Initial Catalog = WebApplication3;
+		   
 		   Integrated Security = true;  
 		   MultipleActiveResultSets = True;  
 		   App = EntityFramework;  
