but<shop_now> , view_orders_view

--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -21,7 +21,7 @@
        Initial Catalog = WebApplication2;-->
 
 	  <!-- Vlad -->
-	  <add name="WebApp" connectionString="Data Source = VLADICK;
+	  <add name="WebApp" connectionString="Data Source = localhost;
 		   Initial Catalog = WebApplication;   
 		   Integrated Security = true;  
 		   MultipleActiveResultSets = True;  
