Manage Users views

--- a/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication.csproj
@@ -254,6 +254,7 @@
     <Compile Include="Models\ReviewModel.cs" />
     <Compile Include="Models\ArticleDataModel.cs" />
     <Compile Include="Models\UserData.cs" />
+    <Compile Include="Models\UserDataModel.cs" />
     <Compile Include="Models\UserLogin.cs" />
     <Compile Include="Models\UserSignIn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -375,6 +376,9 @@
     <Content Include="Views\HomeUser\Wishlist.cshtml" />
     <Content Include="Views\HomeUser\Checkout.cshtml" />
     <Content Include="Views\HomeUser\ProductDetail.cshtml" />
+    <Content Include="Views\ManageUsers\AddUser.cshtml" />
+    <Content Include="Views\ManageUsers\EditUser.cshtml" />
+    <Content Include="Views\ManageUsers\DeleteUser.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
