Squashed commit of the following:
commit 7c4a4ba66592129e421948c1e835436b77ba908e
Author: EvaIablocova <125370412+EvaIablocova@users.noreply.github.com>
Date:   Mon May 27 17:45:11 2024 +0300

    in process add user from Admin account

commit 464088e0166b4fc0f058b0825b9a632ea8efce1b
Author: EvaIablocova <125370412+EvaIablocova@users.noreply.github.com>
Date:   Mon May 27 17:05:53 2024 +0300

    devide into small methods, sign up, log in

commit 2ed9129cfe930ca7fb06ca53b9ea095368f7bdd3
Author: EvaIablocova <125370412+EvaIablocova@users.noreply.github.com>
Date:   Mon May 27 10:18:00 2024 +0300

    Manage Users views

commit cdc260d5207498850c3c3cd8ea66c3973d69c5f9
Author: EvaIablocova <125370412+EvaIablocova@users.noreply.github.com>
Date:   Mon May 27 09:13:47 2024 +0300

    edit articles, dinamic count of articles in view

commit 2511f1617ab644d61615cc5d1be6366370e384f3
Author: EvaIablocova <125370412+EvaIablocova@users.noreply.github.com>
Date:   Mon May 27 07:58:12 2024 +0300

    encrypt admin password

commit e93e952440e2d3e7db8d16767d2f4b2a9857b6a1
Author: EvaIablocova <125370412+EvaIablocova@users.noreply.github.com>
Date:   Sun May 26 22:23:11 2024 +0300

    wishlist db

--- a/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication.csproj
@@ -243,6 +243,7 @@
     <Compile Include="Controllers\ItemsController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\ManageProductController.cs" />
+    <Compile Include="Controllers\ManageUsersController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\ManageContentController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
@@ -253,6 +254,7 @@
     <Compile Include="Models\ReviewModel.cs" />
     <Compile Include="Models\ArticleDataModel.cs" />
     <Compile Include="Models\UserData.cs" />
+    <Compile Include="Models\UserDataModel.cs" />
     <Compile Include="Models\UserLogin.cs" />
     <Compile Include="Models\UserSignIn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -343,7 +345,7 @@
     <Content Include="Views\Shared\ULayout.cshtml" />
     <Content Include="Views\Shared\LayoutAdmin.cshtml" />
     <Content Include="Views\Admin\AdminAccount.cshtml" />
-    <Content Include="Views\Admin\ManageUsers.cshtml" />
+    <Content Include="Views\ManageUsers\ManageUsers.cshtml" />
     <Content Include="Views\Admin\ManageProducts.cshtml" />
     <Content Include="Views\Admin\ManageReview.cshtml" />
     <Content Include="Views\ManageContent\ManageContent.cshtml" />
@@ -374,6 +376,9 @@
     <Content Include="Views\HomeUser\Wishlist.cshtml" />
     <Content Include="Views\HomeUser\Checkout.cshtml" />
     <Content Include="Views\HomeUser\ProductDetail.cshtml" />
+    <Content Include="Views\ManageUsers\AddUser.cshtml" />
+    <Content Include="Views\ManageUsers\EditUser.cshtml" />
+    <Content Include="Views\ManageUsers\DeleteUser.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
