--- a/WebApplication.Domain/WebApplication.Domain.csproj
+++ b/WebApplication.Domain/WebApplication.Domain.csproj
@@ -90,10 +90,15 @@
     <Compile Include="Entities\Admin\ArticleTable.cs" />
     <Compile Include="Entities\Enums\URole.cs" />
     <Compile Include="Entities\Responces\BaseResponces.cs" />
+    <Compile Include="Entities\User\CartEntity.cs" />
+    <Compile Include="Entities\User\CartTable.cs" />
+    <Compile Include="Entities\User\ProductTable.cs" />
     <Compile Include="Entities\User\Session.cs" />
     <Compile Include="Entities\User\UDbTable.cs" />
     <Compile Include="Entities\User\ULoginData.cs" />
     <Compile Include="Entities\User\USignInData.cs" />
+    <Compile Include="Entities\User\WishlistEntity.cs" />
+    <Compile Include="Entities\User\WishlistTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
