--- a/WebApplication.BL/WebApplication.BL.csproj
+++ b/WebApplication.BL/WebApplication.BL.csproj
@@ -102,9 +102,13 @@
     <Compile Include="DBModel\SessionContext.cs" />
     <Compile Include="DBModel\UserContext.cs" />
     <Compile Include="Interfaces\ISession.cs" />
-    <Compile Include="Migrations\202405240938250_CreateUDbTables.cs" />
-    <Compile Include="Migrations\202405240938250_CreateUDbTables.Designer.cs">
-      <DependentUpon>202405240938250_CreateUDbTables.cs</DependentUpon>
+    <Compile Include="Migrations\202405272039512_AddImagePathToArticle.cs" />
+    <Compile Include="Migrations\202405272039512_AddImagePathToArticle.Designer.cs">
+      <DependentUpon>202405272039512_AddImagePathToArticle.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202405291151046_AddImageP.cs" />
+    <Compile Include="Migrations\202405291151046_AddImageP.Designer.cs">
+      <DependentUpon>202405291151046_AddImageP.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -128,8 +132,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202405240938250_CreateUDbTables.resx">
-      <DependentUpon>202405240938250_CreateUDbTables.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202405272039512_AddImagePathToArticle.resx">
+      <DependentUpon>202405272039512_AddImagePathToArticle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202405291151046_AddImageP.resx">
+      <DependentUpon>202405291151046_AddImageP.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
