--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -24,8 +24,8 @@
 	  <!--<add name="WebApp" connectionString="Data Source = VLADICK;
 		   Initial Catalog = WebApplication;-->
 
-		<add name="WebApp" connectionString="Data Source = WIN-93HTOCOIRG8\SQLEXPRESS;
-       Initial Catalog = WebApplication21;
+		<add name="WebApp" connectionString="Data Source = localhost;
+       Initial Catalog = WebApplication2;
 		   
 		   Integrated Security = true;  
 		   MultipleActiveResultSets = True;  
