review db doesnt work

--- a/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication.csproj
@@ -246,6 +246,7 @@
     <Compile Include="Controllers\ManageUsersController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\ManageContentController.cs" />
+    <Compile Include="Controllers\ReviewController.cs" />
     <Compile Include="Controllers\SignUpController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
@@ -379,6 +380,7 @@
     <Content Include="Views\ManageProduct\Index.cshtml" />
     <Content Include="Views\ManageProduct\EditProduct.cshtml" />
     <Content Include="Views\ManageProduct\CreateProduct.cshtml" />
+    <Content Include="Views\Review\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
