--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -22,7 +22,7 @@
 
 	  <!-- Vlad -->
 	  <add name="WebApp" connectionString="Data Source = localhost;
-		   Initial Catalog = ффф;   
+		   Initial Catalog = WebApplication4;   
 		   Integrated Security = true;  
 		   MultipleActiveResultSets = True;  
 		   App = EntityFramework;  
