--- a/WebApplication.BL/WebApplication.BL.csproj
+++ b/WebApplication.BL/WebApplication.BL.csproj
@@ -112,13 +112,9 @@
     <Compile Include="Migrations\202405281417343_listOfProducts29.Designer.cs">
       <DependentUpon>202405281417343_listOfProducts29.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202405291933247_aaa.cs" />
-    <Compile Include="Migrations\202405291933247_aaa.Designer.cs">
-      <DependentUpon>202405291933247_aaa.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202405291939334_UDbTable.cs" />
-    <Compile Include="Migrations\202405291939334_UDbTable.Designer.cs">
-      <DependentUpon>202405291939334_UDbTable.cs</DependentUpon>
+    <Compile Include="Migrations\202405292314481_User.cs" />
+    <Compile Include="Migrations\202405292314481_User.Designer.cs">
+      <DependentUpon>202405292314481_User.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -145,11 +141,8 @@
     <EmbeddedResource Include="Migrations\202405281417343_listOfProducts29.resx">
       <DependentUpon>202405281417343_listOfProducts29.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202405291933247_aaa.resx">
-      <DependentUpon>202405291933247_aaa.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202405291939334_UDbTable.resx">
-      <DependentUpon>202405291939334_UDbTable.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202405292314481_User.resx">
+      <DependentUpon>202405292314481_User.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
