--- a/WebApplication.BL/WebApplication.BL.csproj
+++ b/WebApplication.BL/WebApplication.BL.csproj
@@ -89,8 +89,10 @@
     <Compile Include="AutoMapperProfile.cs" />
     <Compile Include="BusinessLogic.cs" />
     <Compile Include="Core\APIs\CartAPI.cs" />
+    <Compile Include="Core\APIs\OrderApi.cs" />
     <Compile Include="Core\APIs\ProductApi.cs" />
     <Compile Include="Core\DTOs\CartDTO.cs" />
+    <Compile Include="Core\DTOs\OrderDTO.cs" />
     <Compile Include="Core\DTOs\ProductDTO.cs" />
     <Compile Include="Core\APIs\ReviewApi.cs" />
     <Compile Include="Core\DTOs\ReviewDTO.cs" />
@@ -101,6 +103,7 @@
     <Compile Include="Core\APIs\WishlistApi.cs" />
     <Compile Include="Core\DTOs\WishlistDTO.cs" />
     <Compile Include="DBModel\CartContext.cs" />
+    <Compile Include="DBModel\OrderContext.cs" />
     <Compile Include="DBModel\ProductContext.cs" />
     <Compile Include="DBModel\ReviewContext.cs" />
     <Compile Include="DBModel\NewArticleContext.cs" />
