--- a/WebApplication.Domain/WebApplication.Domain.csproj
+++ b/WebApplication.Domain/WebApplication.Domain.csproj
@@ -89,9 +89,9 @@
     <Compile Include="Entities\Admin\ReviewTable.cs" />
     <Compile Include="Entities\Admin\ArticleTable.cs" />
     <Compile Include="Entities\Enums\URole.cs" />
-    <Compile Include="Entities\MyIntIds.cs" />
     <Compile Include="Entities\Responces\BaseResponces.cs" />
     <Compile Include="Entities\User\CartTable.cs" />
+    <Compile Include="Entities\User\MyInt.cs" />
     <Compile Include="Entities\User\OrderTable.cs" />
     <Compile Include="Entities\User\Session.cs" />
     <Compile Include="Entities\User\UDbTable.cs" />
