--- a/WebApplication.BL/WebApplication.BL.csproj
+++ b/WebApplication.BL/WebApplication.BL.csproj
@@ -88,7 +88,7 @@
   <ItemGroup>
     <Compile Include="AutoMapperProfile.cs" />
     <Compile Include="BusinessLogic.cs" />
-    <Compile Include="Core\APIs\CartAPI.cs" />
+    <Compile Include="Core\APIs\CartApi.cs" />
     <Compile Include="Core\APIs\OrderApi.cs" />
     <Compile Include="Core\APIs\ProductApi.cs" />
     <Compile Include="Core\DTOs\CartDTO.cs" />
@@ -111,6 +111,10 @@
     <Compile Include="DBModel\UserContext.cs" />
     <Compile Include="DBModel\WishlistContext.cs" />
     <Compile Include="Interfaces\ISession.cs" />
+    <Compile Include="Migrations\202406051349078_cart.cs" />
+    <Compile Include="Migrations\202406051349078_cart.Designer.cs">
+      <DependentUpon>202406051349078_cart.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessionBL.cs" />
@@ -131,6 +135,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202406051349078_cart.resx">
+      <DependentUpon>202406051349078_cart.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
