--- a/WebApplication.Domain/WebApplication.Domain.csproj
+++ b/WebApplication.Domain/WebApplication.Domain.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Entities\Responces\BaseResponces.cs" />
     <Compile Include="Entities\User\CartTable.cs" />
     <Compile Include="Entities\User\MyInt.cs" />
+    <Compile Include="Entities\User\MyIntCart.cs" />
     <Compile Include="Entities\User\OrderTable.cs" />
     <Compile Include="Entities\User\Session.cs" />
     <Compile Include="Entities\User\UDbTable.cs" />
