--- a/WebApplication/packages.config
+++ b/WebApplication/packages.config
@@ -3,11 +3,13 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net48" />
   <package id="AutoMapper" version="8.1.1" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
+  <package id="jQuery" version="1.8.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.6" targetFramework="net48" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net48" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net48" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net48" />
