--- a/WebApplication.BL/WebApplication.BL.csproj
+++ b/WebApplication.BL/WebApplication.BL.csproj
@@ -111,6 +111,11 @@
     <Compile Include="DBModel\UserContext.cs" />
     <Compile Include="DBModel\WishlistContext.cs" />
     <Compile Include="Interfaces\ISession.cs" />
+    <Compile Include="Migrations\202406081417527_UserContext.cs" />
+    <Compile Include="Migrations\202406081417527_UserContext.Designer.cs">
+      <DependentUpon>202406081417527_UserContext.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessionBL.cs" />
   </ItemGroup>
@@ -130,6 +135,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202406081417527_UserContext.resx">
+      <DependentUpon>202406081417527_UserContext.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
