--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -21,8 +21,8 @@
        Initial Catalog = WebApplication2;-->
 
 	  <!-- Vlad -->
-		<add name="WebApp" connectionString="Data Source = localhost;
-			 Initial Catalog = WebApplication5;
+		<add name="WebApp" connectionString="Data Source = WIN-93HTOCOIRG8\SQLEXPRESS;
+			 Initial Catalog = WebApplication75;
 			 Integrated Security = true;
 			 MultipleActiveResultSets = True;
 			 App = EntityFramework;
